force-app/main/default/objects/Account/fields/NAICS_Code_Del2__c.field-meta.xml
<CustomField>
    <fullName>NAICS_Code_Del2__c</fullName>
    <inlineHelpText>2-digit to 8-digit code representing the market segment of the company with which you are doing business</inlineHelpText>
    <label>NAICS Code Del 2</label>
    <length>8</length>
    <type>Text</type>
</CustomField>