force-app/main/default/objects/Account/fields/NAM__c.field-meta.xml
<CustomField>
    <fullName>NAM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>National Account Manager – Managed at the Parent Account</description>
    <inlineHelpText>National Account Manager – Managed at the Parent Account</inlineHelpText>
    <label>National Account Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Accounts6</relationshipLabel>
    <relationshipName>Accounts6</relationshipName>
    <type>Lookup</type>
</CustomField>