force-app/main/default/objects/Account/fields/NewTerritory__c.field-meta.xml
<CustomField>
    <fullName>NewTerritory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Territory ID</label>
    <referenceTo>Territory__c</referenceTo>
    <relationshipLabel>Accounts (Territory)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>