force-app/main/default/objects/Account/fields/Nickname__c.field-meta.xml
<CustomField>
    <fullName>Nickname__c</fullName>
    <description>For the nickname related to the account.</description>
    <label>Nickname</label>
    <length>60</length>
    <type>Text</type>
</CustomField>