force-app/main/default/objects/Account/fields/Open_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Open_Opportunities__c</fullName>
    <description>Calculates the sum of all open opportunities</description>
    <inlineHelpText>Calculates the sum of all open opportunities</inlineHelpText>
    <label>Open Opportunities</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>notEqual</operation>
        <value>Deal Closure/Won, Closed Lost</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>