force-app/main/default/objects/Account/fields/Operational_Group__c.field-meta.xml
<CustomField>
    <fullName>Operational_Group__c</fullName>
    <inlineHelpText>AMERINET
BENEPLACE
BEST WESTERN
BUILDERS CLUB
CHOICE HOTELS
COMM PRO - SERVICE ONLY
ECOMMERCE CUSTOMER
EQUITY OPS
EQUITY REHAB
ESUPPLY
Healthtrust
MEDASSETS
NOVATION
OBNET
OPSTECH
PREMIER
REPONE
ROI
YARDI</inlineHelpText>
    <label>Operational Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AMERINET</fullName>
            </value>
            <value>
                <fullName>BENEPLACE</fullName>
            </value>
            <value>
                <fullName>BEST WESTERN</fullName>
            </value>
            <value>
                <fullName>BUILDERS CLUB</fullName>
            </value>
            <value>
                <fullName>CHOICE HOTELS</fullName>
            </value>
            <value>
                <fullName>COMM PRO - SERVICE ONLY</fullName>
            </value>
            <value>
                <fullName>ECOMMERCE CUSTOMER</fullName>
            </value>
            <value>
                <fullName>EQUITY OPS</fullName>
            </value>
            <value>
                <fullName>EQUITY REHAB</fullName>
            </value>
            <value>
                <fullName>ESUPPLY</fullName>
            </value>
            <value>
                <fullName>Healthtrust</fullName>
            </value>
            <value>
                <fullName>MEDASSETS</fullName>
            </value>
            <value>
                <fullName>NOVATION</fullName>
            </value>
            <value>
                <fullName>OBNET</fullName>
            </value>
            <value>
                <fullName>OPSTECH</fullName>
            </value>
            <value>
                <fullName>PREMIER</fullName>
            </value>
            <value>
                <fullName>REPONE</fullName>
            </value>
            <value>
                <fullName>ROI</fullName>
            </value>
            <value>
                <fullName>YARDI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>