force-app/main/default/objects/Account/fields/Order_Support_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Support_Phone_Number__c</fullName>
    <inlineHelpText>If this customer is assigned a specific phone number for order support, please list it here (i.e. project desk, government desk, weatherization, etc.). This number will be presented when the customer logs in to Sears Commercial Online.</inlineHelpText>
    <label>Order Support Phone Number</label>
    <type>Phone</type>
</CustomField>