force-app/main/default/objects/Account/fields/Outside_City_Limits__c.field-meta.xml
<CustomField>
    <fullName>Outside_City_Limits__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Outside City Limits</label>
    <type>Checkbox</type>
</CustomField>