force-app/main/default/objects/Account/fields/Outside_Sales_ID__c.field-meta.xml
<CustomField>
    <fullName>Outside_Sales_ID__c</fullName>
    <formula>Owner.Outside_Sales_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outside Sales ID</label>
    <type>Text</type>
</CustomField>