force-app/main/default/objects/Account/fields/Owner_ID_Old__c.field-meta.xml
<CustomField>
    <fullName>Owner_ID_Old__c</fullName>
    <label>Owner ID Old</label>
    <length>40</length>
    <type>Text</type>
</CustomField>