force-app/main/default/objects/Account/fields/Pardot_Marketing_Filter__c.field-meta.xml
<CustomField>
    <fullName>Pardot_Marketing_Filter__c</fullName>
    <description>Used exclusively for identifying accounts to be used in a Pardot campaign.</description>
    <label>Pardot Marketing Filter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>