force-app/main/default/objects/Account/fields/PL1__c.field-meta.xml
<CustomField>
    <fullName>PL1__c</fullName>
    <description>Price List 1</description>
    <inlineHelpText>Price List Identification Number</inlineHelpText>
    <label>PL1</label>
    <length>20</length>
    <type>Text</type>
</CustomField>