force-app/main/default/objects/Account/fields/PL2__c.field-meta.xml
<CustomField>
    <fullName>PL2__c</fullName>
    <description>Price List 2</description>
    <inlineHelpText>Price List Identification Number</inlineHelpText>
    <label>PL2</label>
    <length>20</length>
    <type>Text</type>
</CustomField>