force-app/main/default/objects/Account/fields/PL3__c.field-meta.xml
<CustomField>
    <fullName>PL3__c</fullName>
    <description>Price List 3</description>
    <inlineHelpText>Price List Identification Number</inlineHelpText>
    <label>PL3</label>
    <length>20</length>
    <type>Text</type>
</CustomField>