force-app/main/default/objects/Account/fields/Plan_to_Archive__c.field-meta.xml
<CustomField>
    <fullName>Plan_to_Archive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Plan to Archive?</label>
    <type>Checkbox</type>
</CustomField>