force-app/main/default/objects/Account/fields/Planned_units_in_the_next_12_months__c.field-meta.xml
<CustomField>
    <fullName>Planned_units_in_the_next_12_months__c</fullName>
    <label>Planned units in the next 12 months</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1-10</fullName>
            </value>
            <value>
                <fullName>10-50</fullName>
            </value>
            <value>
                <fullName>50-100</fullName>
            </value>
            <value>
                <fullName>100-300</fullName>
            </value>
            <value>
                <fullName>300+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>