force-app/main/default/objects/Account/fields/POD_SOF__c.field-meta.xml
<CustomField>
    <fullName>POD_SOF__c</fullName>
    <label>POD/SOF</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Proof of Delivery</fullName>
            </value>
            <value>
                <fullName>Signature on File</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>