force-app/main/default/objects/Account/fields/Potential_Annual_Sales__c.field-meta.xml
<CustomField>
    <fullName>Potential_Annual_Sales__c</fullName>
    <inlineHelpText>A - &gt; $500,000
B - $250,000 - $499,999
C - $100,000 - $249,999 
D - $50,000 - $99,999
E - $20,000 - $49,999
F - &lt; $20,000</inlineHelpText>
    <label>Potential Annual Sales</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
            <value>
                <fullName>F</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>