force-app/main/default/objects/Account/fields/Previous_Fiscal_Year_To_Date_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Previous_Fiscal_Year_To_Date_Revenue__c</fullName>
    <description>Previous year revenue for the account</description>
    <label>Previous Fiscal Year To Date Revenue</label>
    <summarizedField>Line_Of_Billing__c.Total_Revenue__c</summarizedField>
    <summaryFilterItems>
        <field>Line_Of_Billing__c.Year__c</field>
        <operation>contains</operation>
        <value>2017</value>
    </summaryFilterItems>
    <summaryForeignKey>Line_Of_Billing__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>