force-app/main/default/objects/Account/fields/Price_List_Type__c.field-meta.xml
<CustomField>
    <fullName>Price_List_Type__c</fullName>
    <description>Field needs to be translated</description>
    <label>Price List Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
            </value>
            <value>
                <fullName>02</fullName>
            </value>
            <value>
                <fullName>C0</fullName>
            </value>
            <value>
                <fullName>C1</fullName>
            </value>
            <value>
                <fullName>C2</fullName>
            </value>
            <value>
                <fullName>C3</fullName>
            </value>
            <value>
                <fullName>C4</fullName>
            </value>
            <value>
                <fullName>C5</fullName>
            </value>
            <value>
                <fullName>C6</fullName>
            </value>
            <value>
                <fullName>C7</fullName>
            </value>
            <value>
                <fullName>C8</fullName>
            </value>
            <value>
                <fullName>C9</fullName>
            </value>
            <value>
                <fullName>CA</fullName>
            </value>
            <value>
                <fullName>CB</fullName>
            </value>
            <value>
                <fullName>CC</fullName>
            </value>
            <value>
                <fullName>CD</fullName>
            </value>
            <value>
                <fullName>CE</fullName>
            </value>
            <value>
                <fullName>CF</fullName>
            </value>
            <value>
                <fullName>CG</fullName>
            </value>
            <value>
                <fullName>CH</fullName>
            </value>
            <value>
                <fullName>CI</fullName>
            </value>
            <value>
                <fullName>CJ</fullName>
            </value>
            <value>
                <fullName>CK</fullName>
            </value>
            <value>
                <fullName>CL</fullName>
            </value>
            <value>
                <fullName>CM</fullName>
            </value>
            <value>
                <fullName>CN</fullName>
            </value>
            <value>
                <fullName>CO</fullName>
            </value>
            <value>
                <fullName>CP</fullName>
            </value>
            <value>
                <fullName>CQ</fullName>
            </value>
            <value>
                <fullName>CR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>