force-app/main/default/objects/Account/fields/Pricing_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Assignment__c</fullName>
    <description>Select which pricing to be standard on the Account.</description>
    <inlineHelpText>Select what is standard pricing module for this Account.</inlineHelpText>
    <label>Pricing Assignment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NPL 10</fullName>
            </value>
            <value>
                <fullName>NPL 20</fullName>
            </value>
            <value>
                <fullName>NPL 30</fullName>
            </value>
            <value>
                <fullName>CPL (Custom Price List)</fullName>
            </value>
            <value>
                <fullName>GPL (District Price List)</fullName>
            </value>
            <value>
                <fullName>OB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>