force-app/main/default/objects/Account/fields/Pricing_Tier__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Tier__c</fullName>
    <defaultValue>&quot;Bronze&quot;</defaultValue>
    <label>Pricing Tier</label>
    <length>50</length>
    <type>Text</type>
</CustomField>