force-app/main/default/objects/Account/fields/Pricing_Tier_Assignment_Date__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Tier_Assignment_Date__c</fullName>
    <label>Pricing Tier Assignment Date</label>
    <type>DateTime</type>
</CustomField>