force-app/main/default/objects/Account/fields/Pricing_Tier_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Tier_Expiration_Date__c</fullName>
    <label>Pricing Tier Expiration Date</label>
    <type>DateTime</type>
</CustomField>