force-app/main/default/objects/Account/fields/Pricing_Tier_QTD_Sales__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Tier_QTD_Sales__c</fullName>
    <label>Pricing Tier QTD Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>