force-app/main/default/objects/Account/fields/Programs__c.field-meta.xml
<CustomField>
    <fullName>Programs__c</fullName>
    <label>Programs</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Best Western</fullName>
            </value>
            <value>
                <fullName>Builder Radio</fullName>
            </value>
            <value>
                <fullName>Building, Remodeling, Moving (BRM)</fullName>
            </value>
            <value>
                <fullName>Commercial Marketplace</fullName>
            </value>
            <value>
                <fullName>Employee Purchase Plan</fullName>
            </value>
            <value>
                <fullName>HUD</fullName>
            </value>
            <value>
                <fullName>One Time Buy</fullName>
            </value>
            <value>
                <fullName>SHIP (Sears Home Improvement)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>