force-app/main/default/objects/Account/fields/Qualification_Debrief__c.field-meta.xml
<CustomField>
    <fullName>Qualification_Debrief__c</fullName>
    <label>Qualification Debrief</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>