force-app/main/default/objects/Account/fields/Quarterly_Sales_Goal__c.field-meta.xml
<CustomField>
    <fullName>Quarterly_Sales_Goal__c</fullName>
    <formula>Owner.Quarterly_Sales_Goal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quarterly Sales Goal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>