force-app/main/default/objects/Account/fields/Reason_Lost__c.field-meta.xml
<CustomField>
    <fullName>Reason_Lost__c</fullName>
    <description>Define the reason this Account was changed to Former.</description>
    <inlineHelpText>Define the reason this Account was changed to Former.</inlineHelpText>
    <label>Reason Lost</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer lost bid or project was cancelled</fullName>
            </value>
            <value>
                <fullName>Product assortment did not meet customer needs</fullName>
            </value>
            <value>
                <fullName>Price offered did not meet customer perception of value</fullName>
            </value>
            <value>
                <fullName>Credit solution did not meet customer needs</fullName>
            </value>
            <value>
                <fullName>Contract terms did not meet customer needs</fullName>
            </value>
            <value>
                <fullName>Service failure (e.g. delivery, billing, order management) caused the customer to purchase elsewhere</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>