force-app/main/default/objects/Account/fields/Reasons_For_Switching_To_The_Competition__c.field-meta.xml
<CustomField>
    <fullName>Reasons_For_Switching_To_The_Competition__c</fullName>
    <description>Reasons For Switching To The Competition</description>
    <inlineHelpText>Please select as many as applicable</inlineHelpText>
    <label>Reasons For Switching To The Competition</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Reasons_For_Not_Working_With_SC__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>No response from customer support center</fullName>
            </value>
            <value>
                <fullName>Non availability of right product</fullName>
            </value>
            <value>
                <fullName>Account Manager no longer available</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Delivery issues</fullName>
            </value>
            <value>
                <fullName>Installation issues</fullName>
            </value>
            <value>
                <fullName>Billing/Credit issue</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>