force-app/main/default/objects/Account/fields/Relevant_for_Rebate__c.field-meta.xml
<CustomField>
    <fullName>Relevant_for_Rebate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>blank	un checked
x	        checked</description>
    <inlineHelpText>blank	un checked
x	        checked</inlineHelpText>
    <label>Relevant for Rebate</label>
    <type>Checkbox</type>
</CustomField>