force-app/main/default/objects/Account/fields/Reporting_Group__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Group__c</fullName>
    <label>Reporting Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Beneplace</fullName>
            </value>
            <value>
                <fullName>Best Western</fullName>
            </value>
            <value>
                <fullName>Builder Radio</fullName>
            </value>
            <value>
                <fullName>Builders Club</fullName>
            </value>
            <value>
                <fullName>Choice Hotels</fullName>
            </value>
            <value>
                <fullName>Comm Pro - Non Recourse</fullName>
            </value>
            <value>
                <fullName>CommPro - Service Only</fullName>
            </value>
            <value>
                <fullName>Contract Accts</fullName>
            </value>
            <value>
                <fullName>Ecommerce Customer</fullName>
            </value>
            <value>
                <fullName>Employee Purchase Plan</fullName>
            </value>
            <value>
                <fullName>Equity Customers</fullName>
            </value>
            <value>
                <fullName>Equity New Const</fullName>
            </value>
            <value>
                <fullName>Equity Rehab</fullName>
            </value>
            <value>
                <fullName>GSA</fullName>
            </value>
            <value>
                <fullName>Home Warranty</fullName>
            </value>
            <value>
                <fullName>Plumbing Distributor</fullName>
            </value>
            <value>
                <fullName>Recourse Comm One</fullName>
            </value>
            <value>
                <fullName>Recourse Comm Pro</fullName>
            </value>
            <value>
                <fullName>Sears Commercial market Place</fullName>
            </value>
            <value>
                <fullName>SHUSTER</fullName>
            </value>
            <value>
                <fullName>Southern Living</fullName>
            </value>
            <value>
                <fullName>SPOC Priorty Customer</fullName>
            </value>
            <value>
                <fullName>Weatherization Program</fullName>
            </value>
            <value>
                <fullName>YARDI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>