force-app/main/default/objects/Account/fields/Reseller__c.field-meta.xml
<CustomField>
    <fullName>Reseller__c</fullName>
    <inlineHelpText>Is this account a Reseller? If “Yes” a notification email will be sent to the file administration team to investigate further.</inlineHelpText>
    <label>Reseller</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>