force-app/main/default/objects/Account/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <defaultValue>&quot;Sold-To Party&quot;</defaultValue>
    <label>Role</label>
    <length>20</length>
    <type>Text</type>
</CustomField>