force-app/main/default/objects/Account/fields/Round_Robin_Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>Round_Robin_Auto_Number__c</fullName>
    <displayFormat>{0}</displayFormat>
    <label>Round Robin Auto Number</label>
    <type>AutoNumber</type>
</CustomField>