force-app/main/default/objects/Account/fields/Round_Robin_ID__c.field-meta.xml
<CustomField>
    <fullName>Round_Robin_ID__c</fullName>
    <formula>MOD(VALUE(Round_Robin_Auto_Number__c ),2) +1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Round Robin ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>