force-app/main/default/objects/Account/fields/Sales_Representative__c.field-meta.xml
<CustomField>
    <fullName>Sales_Representative__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Look up the Sales Representative name. Only enter in this field if different from the Account Owner and they are a Sales Representative.</description>
    <inlineHelpText>Look up the Sales Representative name. Only enter in this field if different from the Account Owner and they are a Sales Representative.</inlineHelpText>
    <label>Sales Representative</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Title</field>
            <operation>equals</operation>
            <value>Sales Representative</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>