force-app/main/default/objects/Account/fields/Sales_Representative_OLD__c.field-meta.xml
<CustomField>
    <fullName>Sales_Representative_OLD__c</fullName>
    <label>Sales Representative OLD</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Albert Nelson</fullName>
            </value>
            <value>
                <fullName>Andrew Davis</fullName>
            </value>
            <value>
                <fullName>Andrew Schanuth</fullName>
            </value>
            <value>
                <fullName>Bill Boney</fullName>
            </value>
            <value>
                <fullName>Bill Gillette</fullName>
            </value>
            <value>
                <fullName>Brad Bodnar</fullName>
            </value>
            <value>
                <fullName>Brian Blodgett</fullName>
            </value>
            <value>
                <fullName>Carl Cramer</fullName>
            </value>
            <value>
                <fullName>Charles Davis</fullName>
            </value>
            <value>
                <fullName>Chris Harris</fullName>
            </value>
            <value>
                <fullName>Christine Smith</fullName>
            </value>
            <value>
                <fullName>Christopher Smith</fullName>
            </value>
            <value>
                <fullName>Curt Thrasher</fullName>
            </value>
            <value>
                <fullName>David Anderson</fullName>
            </value>
            <value>
                <fullName>David Taylor</fullName>
            </value>
            <value>
                <fullName>Deb Caton</fullName>
            </value>
            <value>
                <fullName>Deborah Beeman</fullName>
            </value>
            <value>
                <fullName>Don Huff</fullName>
            </value>
            <value>
                <fullName>Don Stoeckel</fullName>
            </value>
            <value>
                <fullName>Douglas Walker</fullName>
            </value>
            <value>
                <fullName>Ed Abraham</fullName>
            </value>
            <value>
                <fullName>Ed Osborne</fullName>
            </value>
            <value>
                <fullName>Edward Breaux</fullName>
            </value>
            <value>
                <fullName>Edward Novak III</fullName>
            </value>
            <value>
                <fullName>Edward Ramos</fullName>
            </value>
            <value>
                <fullName>Eric Johnson</fullName>
            </value>
            <value>
                <fullName>Eric Strait</fullName>
            </value>
            <value>
                <fullName>Erik Baez</fullName>
            </value>
            <value>
                <fullName>Francisco Pérez</fullName>
            </value>
            <value>
                <fullName>Fred Matos</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>