force-app/main/default/objects/Account/fields/SAP_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>SAP_Account_ID__c</fullName>
    <description>SAP Account ID</description>
    <externalId>true</externalId>
    <label>SAP Account ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>