force-app/main/default/objects/Account/fields/SAP_Account_Request__c.field-meta.xml
<CustomField>
    <fullName>SAP_Account_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SAP Account Request</label>
    <type>Checkbox</type>
</CustomField>