force-app/main/default/objects/Account/fields/SAP_Account_Request_DateTime_C__c.field-meta.xml
<CustomField>
    <fullName>SAP_Account_Request_DateTime_C__c</fullName>
    <label>SAP Account Request DateTime</label>
    <type>DateTime</type>
</CustomField>