force-app/main/default/objects/Account/fields/SAP_Flagged_Accounts__c.field-meta.xml
<CustomField>
    <fullName>SAP_Flagged_Accounts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SAP Flagged Accounts</label>
    <type>Checkbox</type>
</CustomField>